--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/hero.css">
-        <link rel="stylesheet" href="css/html5-boilerplate.css">
+        <!-- <link rel="stylesheet" href="css/html5-boilerplate.css"> -->
         <link rel="stylesheet" href="css/main.css">
         
     </head>
