--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                             <button class="btn btn-primary">LEARN MORE</button>
                         </div>
                         <div class="mobile-hero-section">
-                            <div data-aos="fade-in" data-aos-delay="1200"  class="number-mobile-section">
+                            <div data-aos="fade-in" data-aos-delay="1200"  class="number-mobile-section" data-aos-offset="-2000">
                                 <h2 data-aos="fade-in" data-aos-delay="1200" data-aos-offset="-2000" class="no-space">+ 200</h2>
                                 <p data-aos="fade-in" data-aos-delay="1200" data-aos-offset="-2000" class="no-space">Members</p>
                             </div>
-                            <div data-aos="fade-in" data-aos-delay="1300" class="product">
+                            <div data-aos="fade-in" data-aos-delay="1300" data-aos-offset="-2000" class="product">
                                 <div class="product-img-conatiner">
                                 </div>
                                 <div class="product-text-container">
